--- a/MyPantry/Pantry/templates/index.html
+++ b/MyPantry/Pantry/templates/index.html
@@ -1,9 +1,17 @@
 
+
+{% extend "MyPantry/base.html" %}
+{% block content %}
 <h1>Search</h1>
-<form>
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit" />
+<form action="/ingredients/" method="post">
+	{% csrf_token %}
+	{{form}}
+    <input type="submit" value="Submit">   
 </form>
+
+{%if form%} 
 <h2>Yummly API</h2>
 <p>You searched for: <strong>{{ query }}</strong>.</p>
+<p>Recipe Found: <p>{{result}}</p>
+{% endblock %}
+{{endif}}
