--- a/MyPantry/Pantry/templates/index.html
+++ b/MyPantry/Pantry/templates/index.html
@@ -12,6 +12,6 @@
 {%if form%} 
 <h2>Yummly API</h2>
 <p>You searched for: <strong>{{ query }}</strong>.</p>
-<p>Recipe Found: <p>{{result}}</p>
+<p>Recipe Found: <p>{{recipeName}}</p>
 {% endblock %}
 {{endif}}
