--- a/MyPantry/Pantry/templates/index.html
+++ b/MyPantry/Pantry/templates/index.html
@@ -1,15 +1,16 @@
-
-
-{% extend "MyPantry/base.html" %}
-{% block content %}
 <h1>Search</h1>
+{% if form %}
 <form action="/pantry/" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Search" />
 </form>
-
-{%if form%}
+{% else %}
+<form action="/pantry/" method="get">
+    <input type="submit" value="Back" />
+</form>
+{% endif %}
+{% if matches %}
 <h2>Yummly API</h2>
 <p>You searched for: <strong>{{ query }}</strong>.</p>
 <hr>
@@ -18,3 +19,4 @@
 <p>Ingredients: <br> <strong>{% for igen in match.ingredients %}<span style="color: gray;"> - {{ igen }}</span><br>{% endfor %}</strong></p>
 <hr>
 {% endfor %}
+{% endif %}
