--- a/MyPantry/Pantry/templates/base.html
+++ b/MyPantry/Pantry/templates/base.html
@@ -1,7 +1,35 @@
-<nav>
-    <a href="/pantry">Search</a>
-    <a href="/pantry/ingredients">View Ingredients</a>
-</nav>
-
-{% block content %}
-{% endblock %}
+{% load static %}
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="icon" href="">
+        <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
+        <title>MyPantry</title>
+    </head>
+    <body>
+    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/pantry">MyPantry</a>
+      <form action="/pantry/" method="post">
+          {% csrf_token %}
+          {{ form.non_field_errors }}
+          {{ form.query.errors }}
+          <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search" name="search">
+      </form>
+      <ul class="navbar-nav px-3">
+        <li class="nav-item">
+          <a class="nav-link" href="/pantry/ingredients">View Ingredients</a>
+        </li>
+        <li class="nav-item text-nowrap">
+          <a class="nav-link" href="#">Sign in</a>
+        </li>
+      </ul>
+    </nav>
+    {% block content %}
+    {% endblock %}
+    </body>
+</html>
