--- a/MyPantry/Pantry/templates/base.html
+++ b/MyPantry/Pantry/templates/base.html
@@ -6,30 +6,79 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <link rel="icon" href="">
-        <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-        <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
+        <!-- <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script> -->
         <title>MyPantry</title>
     </head>
     <body>
-    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/pantry">MyPantry</a>
-      <form action="/pantry/" method="post">
-          {% csrf_token %}
-          {{ form.non_field_errors }}
-          {{ form.query.errors }}
-          <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search" name="search">
-      </form>
-      <ul class="navbar-nav px-3">
-        <li class="nav-item">
-          <a class="nav-link" href="/pantry/ingredients">View Ingredients</a>
-        </li>
-        <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Sign in</a>
-        </li>
-      </ul>
-    </nav>
-    {% block content %}
-    {% endblock %}
+        <form class="border: 0;" action="/pantry/" method="post">
+            <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+                <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/pantry">MyPantry</a>
+                {%csrf_token%}
+                {{form.query}}
+                <ul class="navbar-nav px-3">
+                    <li class="nav-item text-nowrap">
+                        <a href="/pantry/login/" class="nav-link">Sign in</a>
+                    </li>
+                </ul>
+            </nav>
+        </form>
+
+        <div class="container-fluid">
+          <div class="row">
+            <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+              <div class="sidebar-sticky">
+                <ul class="nav flex-column">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/pantry">
+                      <span data-feather="home"></span>
+                      Pantry <span class="sr-only">(current)</span>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/pantry/recipes">
+                      <span data-feather="book"></span>
+                      All Recipes
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/pantry/ingredients">
+                      <span data-feather="shopping-cart"></span>
+                      All Ingredients
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <span data-feather="users"></span>
+                      Friends
+                    </a>
+                  </li>
+                </ul>
+
+                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                  <span>Recent Recipes</span>
+                  <a class="d-flex align-items-center text-muted" href="#">
+                    <span data-feather="plus-circle"></span>
+                  </a>
+                </h6>
+              </div>
+            </nav>
+            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+                {% block content %}
+                {% endblock %}
+            </main>
+            </div>
+        </div>
+
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <!-- Icons -->
+        <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+        <script>
+          feather.replace()
+        </script>
     </body>
 </html>
