--- a/MyPantry/Pantry/templates/ingredients.html
+++ b/MyPantry/Pantry/templates/ingredients.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Ingredient List</h1>
+<h1 class="h1">Ingredient List</h1>
 {% if ingredients %}
-<h2>MyPantry Possible Ingredients: {% if total_ingredients %}{{total_ingredients}}{% endif %}</h2>
-<table class="table">
+<h2 class="h2">MyPantry Possible Ingredients: {% if total_ingredients %}{{total_ingredients}}{% endif %}</h2>
+<table class="table table-hover table-sm">
   <thead>
     <tr>
         <th scope="col">ID</th>
