--- a/MyPantry/Pantry/templates/login.html
+++ b/MyPantry/Pantry/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">Dashboard{% if matches %} &mdash; You searched for: <strong>{{ query }}</strong>{% endif %}</h1>
+    <h1 class="h1">Login</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group mr-2">
         <button class="btn btn-sm btn-outline-secondary">Share</button>
@@ -13,11 +13,10 @@
         </button>
     </div>
 </div>
-    {% if matches %}
-    {% for match in matches %}
-    <h4 class="h4"><strong><span style="color: red;">{{ match.recipeName }}</span></strong></h4>
-    <p class="p">Ingredients: <br> <strong>{% for igen in match.ingredients %}<span style="color: gray;"> - {{ igen }}</span><br>{% endfor %}</strong></p>
-    <hr>
-    {% endfor %}
-    {% endif %}
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+  <strong>Holy guacamole!</strong> You should check back later for more features.
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 {% endblock %}
