--- a/MyPantry/Pantry/templates/base.html
+++ b/MyPantry/Pantry/templates/base.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="">
         <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-        <!-- <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script> -->
+        <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
         <title>MyPantry</title>
     </head>
     <body>
@@ -37,7 +37,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link {% if activate == 'home' %}active{% endif %}" href="#">
+                    <a class="nav-link {% if activate == 'myrecipes' %}active{% endif %}" href="{% url 'myrecipes' %}">
                       <span data-feather="file"></span>
                       My Recipes
                     </a>
