--- a/MyPantry/Pantry/templates/ingredients.html
+++ b/MyPantry/Pantry/templates/ingredients.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1 class="h1">Ingredient List</h1>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h1">Ingredient List</h1>
+</div>
 {% if ingredients %}
 <h2 class="h2">MyPantry Possible Ingredients: {% if total_ingredients %}{{total_ingredients}}{% endif %}</h2>
 <table class="table table-hover table-sm">
