--- a/MyPantry/Pantry/templates/recipes.html
+++ b/MyPantry/Pantry/templates/recipes.html
@@ -1,22 +1,28 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h1">Recipes</h1>
-    <div class="btn-toolbar mb-2 mb-md-0">
-        <div class="btn-group mr-2">
-        <button class="btn btn-sm btn-outline-secondary">Share</button>
-        <button class="btn btn-sm btn-outline-secondary">Export</button>
-        </div>
-        <button class="btn btn-sm btn-outline-secondary dropdown-toggle">
-        <span data-feather="calendar"></span>
-        This week
-        </button>
-    </div>
+    <h1 class="h1">All Recipes</h1>
 </div>
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
-  <strong>Holy guacamole!</strong> You should check back later for more features.
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
+{% if recipeList %}
+<h2 class="h2">MyPantry Possible Recipes: {% if total_ingredients %}{{total_ingredients}}{% endif %}</h2>
+<table class="table table-hover table-sm">
+  <thead>
+    <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Ingredient Name</th>
+        <th scope="col">Category</th>
+    </tr>
+  </thead>
+  <tbody>
+{% for recipe in recipeList %}
+  <tr>
+    <td scope="row">{{ recipe.recipe_id }}</td>
+    <td>{{ recipe.name }}</td>
+    <td>{{ recipe.img_url }}</td>
+    </tr>
+{% endfor %}
+</table>
+{% else %}
+<p>No Recipes :(</p>
+{% endif %}
 {% endblock %}
