--- a/MyPantry/Pantry/templates/login.html
+++ b/MyPantry/Pantry/templates/login.html
@@ -12,5 +12,6 @@
   </form>
   <br>
   <p><strong>-- OR --</strong></p>
-  <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
+  <a class="btn btn-dark" href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
+  <a class="btn btn-primary" href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a><br>
 {% endblock %}
