--- a/MyPantry/Pantry/templates/index.html
+++ b/MyPantry/Pantry/templates/index.html
@@ -28,7 +28,7 @@
     <form action="/pantry/show_recipe/" method="post">
         {% csrf_token %}
         <input type="hidden" name="recipe_id" value="{{ match.id }}" hidden>
-        <button class="btn btn-primary"><span data-feather="plus"></span> Add recipe</button>
+        <button class="btn btn-primary"><span data-feather="plus"></span> View recipe</button>
     </form>
   </div>
 </div>
