--- a/MyPantry/Pantry/templates/login.html
+++ b/MyPantry/Pantry/templates/login.html
@@ -1,17 +1,56 @@
 
-
-
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Login</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-  </form>
+
+  <style>
+  .div1 {
+    border-radius: 25px;
+    width: 28%;
+    height: 40%;
+    padding-top: 45px;
+    padding-right: 15px;
+    padding-left: 15px;
+    background: #F7F7F7;
+    margin-right: auto;
+    margin-left: auto;
+
+    box-sizing: border-box;
+
+  }
+
+  width: 300px;
+    height: 100px;
+    border: 1px solid blue;
+    box-sizing: border-box;
+  </style>
+  <p> </p>
+  <p> </p>
   <br>
-  <p><strong>-- OR --</strong></p>
-  <a class="btn btn-dark" href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
-  <a class="btn btn-primary" href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a><br>
+  <br>
+  <br>
+
+
+  <div class="text-center p-t-136" >
+    <div class="div1">
+      <h1>Login</h1>
+      <br>
+          <a href="{% url 'social:begin' 'github' %}">
+            <div class="btn-group">
+              <button type="button" class="btn btn-warning">Log in with Github</button>
+            </div>
+          </a>
+          <br>
+          <br>
+          <a href="{% url 'social:begin' 'twitter' %}">
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary">Log in with Twitter</button>
+            </div>
+        </a>
+    </div>
+  </div>
+
+
+
+
 {% endblock %}
