--- a/MyPantry/Pantry/templates/myrecipes.html
+++ b/MyPantry/Pantry/templates/myrecipes.html
@@ -8,10 +8,29 @@
         </div>
     </div>
 </div>
+{% if myrecipes %}
+<div class="card-columns">
+{% for match in myrecipes %}
+<div class="card">
+<div class="card-body">
+  <h5 class="card-title">{{ match.recipe.name }}</h5>
+</div>
+<div class="card-body text-center">
+  <form action="/pantry/show_recipe/" method="post">
+      {% csrf_token %}
+      <input type="hidden" name="recipe_id" value="{{ match.recipe.recipe_id }}" hidden>
+      <button class="btn btn-primary"><span data-feather="plus"></span> View recipe</button>
+  </form>
+</div>
+</div>
+{% endfor %}
+</div>
+{% else %}
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
-  <strong>Holy guacamole!</strong> You should check back later for more features.
+  <strong>Holy guacamole!</strong> You should go get some recipes!.
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
+{% endif %}
 {% endblock %}
