--- a/MyPantry/Pantry/templates/base.html
+++ b/MyPantry/Pantry/templates/base.html
@@ -22,7 +22,7 @@
                 <ul class="navbar-nav px-3">
                     <li class="nav-item text-nowrap">
                         {% if user.is_authenticated %}
-                            <a class="nav-link">Welcome, {{ user }}!</a>
+                            <a href="{% url 'profile' %}" class="nav-link">Welcome, {{ user }}!</a>
                         {% else %}
                         <a href="{% url 'login' %}" class="nav-link">Sign in</a>
                         {% endif %}
