--- a/MyPantry/Pantry/templates/index.html
+++ b/MyPantry/Pantry/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="container-fluid">
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h1">Home{% if matches %} &mdash; You searched for: <strong>{{ query }}</strong>{% endif %}</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
@@ -35,5 +36,6 @@
 {% endfor %}
 </div>
 {% endif %}
+</div>
 
 {% endblock %}
