--- a/MyPantry/Pantry/templates/login.html
+++ b/MyPantry/Pantry/templates/login.html
@@ -4,51 +4,35 @@
 {% block content %}
 
   <style>
-  .div1 {
-    border-radius: 25px;
-    width: 28%;
-    height: 40%;
-    padding-top: 45px;
-    padding-right: 15px;
-    padding-left: 15px;
-    background: #F7F7F7;
-    margin-right: auto;
-    margin-left: auto;
-
-    box-sizing: border-box;
-
-  }
-
-  width: 300px;
-    height: 100px;
-    border: 1px solid blue;
-    box-sizing: border-box;
+.card {
+        margin: 0 auto; /* Added */
+        float: none; /* Added */
+        margin-bottom: 10px; /* Added */
+}
   </style>
-  <p> </p>
-  <p> </p>
-  <br>
-  <br>
-  <br>
+  <div class="container-fluid mh-100">
+      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+          <h1 class="h1">Login</h1>
+      </div>
 
-
-  <div class="text-center p-t-136" >
-    <div class="div1">
-      <h1>Login</h1>
-      <br>
-          <a href="{% url 'social:begin' 'github' %}">
-            <div class="btn-group">
-              <button type="button" class="btn btn-warning">Log in with Github</button>
+    <div class="card border-info mb-3" style="max-width: 18rem;">
+        <div class="card-header">Login</div>
+        <div class="card-body text-info">
+            <h5 class="card-title">OAuth</h5>
+            <p class="card-text">Please use one of the following two options to log in</p>
+            <div class="form-group">
+              <a href="{% url 'social:begin' 'github' %}">
+                  <button type="button" class="btn btn-dark form-control">Log in with Github</button>
+              </a>
             </div>
-          </a>
-          <br>
-          <br>
-          <a href="{% url 'social:begin' 'twitter' %}">
-            <div class="btn-group">
-              <button type="button" class="btn btn-primary">Log in with Twitter</button>
+            <div class="form-group">
+                <a href="{% url 'social:begin' 'twitter' %}">
+                    <button type="button" class="btn btn-primary form-control">Log in with Twitter</button>
+                </a>
             </div>
-        </a>
+        </div>
     </div>
-  </div>
+</div>
 
 
 
